# SOVD-explorer

./: .gitignore  AGENTS.md  ARCHITECTURE.md  index.html  package-lock.json  package.json  setup-deps.sh  start.sh  vite.config.ts
.github/workflows/: fmt.yml
docs/: standard-dids-and-security.md
scripts/: install-prerequisites.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
