[package]
name = "sovd-explorer"
version = "0.1.0"
description = "SOVD Protocol Explorer GUI"
authors = ["you"]
edition = "2021"

[lib]
name = "sovd_explorer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
hex = "0.4"
rfd = "0.15"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
url = "2"
open = "5"

# SOVD crates from local workspace
sovd-client = { path = "/home/saka/BALI/SOVDd/crates/sovd-client" }
sovd-uds = { path = "/home/saka/BALI/SOVDd/crates/sovd-uds", default-features = false }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
